# project-2_Rogozenko_M25-555

./: .gitignore  Makefile  README.md  demo  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  utils.py
